minor in blog detail template

--- a/blog/templates/blog/detail.html
+++ b/blog/templates/blog/detail.html
@@ -11,7 +11,7 @@
         </video> -->
     </div>
     <div class="uk-width-1-3">
-    	<video width="480" height="320" autoplay loop muted controls>  
+    	<video width="480" height="320" autoplay loop controls>  
             <source src="http://static.nclab.com.cn/video/HOC-Section-1.mp4" type="video/mp4" >
         </video>
     </div>
