reactjs block in base template

--- a/jungle/templates/base/v0.1/base.html
+++ b/jungle/templates/base/v0.1/base.html
@@ -23,10 +23,7 @@
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
     <script src="{% static 'jungle/js/ie-emulation-modes-warning.js' %}"></script>
     
-    <!-- React.js -->
-    <script src="{% static 'react/build/react.js' %}"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.min.js"></script>
-    
+    {% block reactjs %} {% endblock %}
     <!-- Vue.js -->
     <script src="{% static 'vue/0.12.10/vue.min.js' %}"></script>
 
