--- a/alipay/templates/alipay/base.html
+++ b/alipay/templates/alipay/base.html
@@ -15,6 +15,7 @@
 
 		<link rel="stylesheet" href="{% static 'alipay/css/alipay.css' %}">
 		<link rel="stylesheet" href="{% static 'alipay/css/style.css' %}">
+        {% block headjs %}{% endblock %}
 </head>
 
 <body text=#000000 bgColor="#ffffff" leftMargin=0 topMargin=4>
