add redirect address in thank template

--- a/muster/templates/muster/thank.html
+++ b/muster/templates/muster/thank.html
@@ -14,6 +14,7 @@
 		{% else %}
 			<p>恭喜您帐户激活成功.</p>
 			<p>祝使用愉快。</p>
+			<p><a href="https://desktop.nclab.com/" target="_blank">在线桌面</a> 欢迎您！</p>
 		{% endif%}
 	{% endif %}
 {% endblock %}
