--- a/jungle/templates/rest_framework/login.html
+++ b/jungle/templates/rest_framework/login.html
@@ -2,4 +2,6 @@
 
 {# Override this template in your own templates directory to customize #}
 
-{% block branding %}<h3 style="margin: 0 0 20px;">Computing-works</h3>{% endblock %}
+{% block branding %}
+    <h3 style="margin: 0 0 20px;">Computing-works</h3>
+{% endblock %}
