--- a/jungle/templates/base/v0.1/base.html
+++ b/jungle/templates/base/v0.1/base.html
@@ -80,7 +80,13 @@
               <li><a href="{% url 'muster:login' %}" class="btn btn-success" role="button">登陆</a></li>
               <li><a href="{% url 'muster:register' %}" class="btn btn-primary" role="button">注册</a></li>
             {% else %}
-              <li> <p class="bg-info">欢迎: {{ user.username }} </p></li>
+              <li role="presentation" class="dropdown">
+                <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="true"><button class="btn btn-info">欢迎: {{ user.username }} <span class="caret"> </button></span></a>
+                <ul class="dropdown-menu">
+                  <a href="{% url 'muster:thank' %}">进入帐户</a>
+                </ul>
+              </li>
+              <!-- <li> <p class="bg-info">欢迎: {{ user.username }} </p></li> -->
               {% if user.is_staff and user.is_superuser %}
                 <li> <a href="/dimension/admin/" class="btn btn-primary" role="button">  管理员 </a></li>
               {% endif %}
