--- a/jungle/templates/base/v0.1/base.html
+++ b/jungle/templates/base/v0.1/base.html
@@ -213,8 +213,9 @@
 
     <footer>
       <p class="text-center">&copy; Computing-works 2015 | <img style="width: 120px; height: 120px" src="http://images.nclab.com.cn/img/karel-qr.jpg"/> | <a href="http://desktop.nclab.com.cn:8888/" target='_blank'>在线桌面</a> 
-        | <a href="https://desktop.nclab.com/" target='_blank'>互动课程(英文版)</a></p>
-	  <p class="text-center"><img style="width: 78px; height: 28px" src="http://images.nclab.com.cn/img/accept-sign-general.2248fd13.png"/>: 164L9tHd2B4nvm51yK9mAPjbbGo1fCtgN4 </p>
+        | <a href="https://desktop.nclab.com/" target='_blank'>互动课程(英文版)</a> | 
+    <a href={% url 'blog:index' %}>博客</a></p>
+	  <p class="text-center"><img style="width: 78px; height: 28px" src="http://images.nclab.com.cn/img/accept-sign-general.2248fd13.png"/>: 164L9tHd2B4nvm51yK9mAPjbbGo1fCtgN4 </p> 
     </footer>
     
     <!-- Bootstrap core JavaScript
