--- a/jungle/templates/base/v0.1/base.html
+++ b/jungle/templates/base/v0.1/base.html
@@ -109,7 +109,7 @@
             <p>Karel the Robot 是驻在在线平台中的可视化互动自学习机器人, 它能够帮助初学者循序渐进地进入编程殿堂.</p>
 	           <p><a class="btn btn-primary btn-lg" href="http://karel.readthedocs.org/zh_CN/latest/p01.html" role="button" target='_blank'>了解更多 &raquo;</a> | 
 			<a class="btn btn-default" href="/alipay/" role="button" >购买 &raquo;</a> | 
-      <a class="btn btn-default" href="https://desktop.nclab.com/viewer/673c32d01644453a81ad4cf716748b5a" role="button" target="_blank"> 体验&raquo;</a>
+      <a class="btn btn-default" href="https://hoc.nclab.com/karel/" role="button" target="_blank"> 体验&raquo;</a>
     </p>
           </div>
           <div class="col-md-4">
