change fontpage slides

--- a/jungle/templates/base/v0.1/base.html
+++ b/jungle/templates/base/v0.1/base.html
@@ -128,41 +128,41 @@
             <!-- Wrapper for slides -->
             <div class="carousel-inner" role="listbox">
               <div class="item active">
-                <img src="{% static 'img/slides/kids/1.jpg' %}" alt="...">
+                <img src="{% static 'img/slides/kids/1.png' %}" alt="...">
                 <div class="carousel-caption">
                      ...
                 </div>
               </div>
               <div class="item">
-                <img src="{% static 'img/slides/kids/2.jpg' %}" alt="...">
+                <img src="{% static 'img/slides/kids/2.png' %}" alt="...">
                 <div class="carousel-caption">
                   <h3></h3>
                   <p></p>
                 </div>
               </div>
               <div class="item">
-                <img src="{% static 'img/slides/kids/3.jpg' %}" alt="...">
+                <img src="{% static 'img/slides/kids/3.png' %}" alt="...">
                 <div class="carousel-caption">
                   <h3></h3>
                   <p></p>
                 </div>
               </div>
               <div class="item">
-                <img src="{% static 'img/slides/kids/4.jpg' %}" alt="...">
+                <img src="{% static 'img/slides/kids/4.png' %}" alt="...">
                 <div class="carousel-caption">
                   <h3></h3>
                   <p></p>
                 </div>
               </div>
               <div class="item">
-                <img src="{% static 'img/slides/kids/5.jpg' %}" alt="...">
+                <img src="{% static 'img/slides/kids/5.png' %}" alt="...">
                 <div class="carousel-caption">
                   <h3></h3>
                   <p></p>
                 </div>
               </div>
               <!-- <div class="item">
-                <img src="{% static 'img/slides/kids/6.jpg' %}" alt="...">
+                <img src="{% static 'img/slides/kids/6.png' %}" alt="...">
                 <div class="carousel-caption">
                   <h3></h3>
                   <p></p>
@@ -213,7 +213,7 @@
     <hr>
 
     <footer>
-      <p class="text-center">&copy; Computing-works 2016 | <img style="width: 120px; height: 120px" src="http://images.nclab.com.cn/img/karel-qr.jpg"/> | <a href="http://desktop.nclab.com.cn:8888/" target='_blank'>在线桌面</a> 
+      <p class="text-center">&copy; Computing-works 2016 | <img style="width: 120px; height: 120px" src="http://images.nclab.com.cn/img/karel-qr.png"/> | <a href="http://desktop.nclab.com.cn:8888/" target='_blank'>在线桌面</a> 
         | <a href="https://desktop.nclab.com/" target='_blank'>互动课程(英文版)</a> | 
     <a href={% url 'blog:index' %}>博客</a> | <a href="/">学校</a> | <a href="/status/">状态</a> | <a href="/resource/">资源</a></p>
 	  <p class="text-center"><img style="width: 78px; height: 28px" src="http://images.nclab.com.cn/img/accept-sign-general.2248fd13.png"/>: 164L9tHd2B4nvm51yK9mAPjbbGo1fCtgN4 </p> 
