--- a/jungle/templates/base/v0.1/base.html
+++ b/jungle/templates/base/v0.1/base.html
@@ -213,7 +213,7 @@
     <hr>
 
     <footer>
-      <p class="text-center">&copy; Computing-works 2016 | <img style="width: 120px; height: 120px" src="http://images.nclab.com.cn/img/karel-qr.png"/> | <a href="http://desktop.nclab.com.cn:8888/" target='_blank'>在线桌面</a> 
+      <p class="text-center">&copy; Computing-works 2016 | <img style="width: 120px; height: 120px" src="http://images.nclab.com.cn/img/karel-qr.jpg"/> | <a href="http://desktop.nclab.com.cn:8888/" target='_blank'>在线桌面</a> 
         | <a href="https://desktop.nclab.com/" target='_blank'>互动课程(英文版)</a> | 
     <a href={% url 'blog:index' %}>博客</a> | <a href="/">学校</a> | <a href="/status/">状态</a> | <a href="/resource/">资源</a></p>
 	  <p class="text-center"><img style="width: 78px; height: 28px" src="http://images.nclab.com.cn/img/accept-sign-general.2248fd13.png"/>: 164L9tHd2B4nvm51yK9mAPjbbGo1fCtgN4 </p> 
