modify resource template

--- a/jungle/templates/jungle/resource.html
+++ b/jungle/templates/jungle/resource.html
@@ -15,28 +15,28 @@
   <div class="uk-width-2-10">
     <div class="uk-panel uk-panel-hover">
       <h3 class="uk-panel-title"><i class="uk-icon-book"></i> Karel机器人</h3>
-      <a href="http://static.nclab.com.cn/textbook/Karel.pdf"><img height="200" src="http://images.nclab.com.cn/img/karel-cover-small.png" alt=""></a>
+      <a href="http://static.nclab.com.cn/textbook/Karel.pdf"><img class="uk-border-rounded" height="200" src="http://images.nclab.com.cn/img/karel-cover-small.png" alt=""></a>
     </div>
   </div>
 
   <div class="uk-width-2-10">
     <div class="uk-panel uk-panel-hover">
       <h3 class="uk-panel-title"><i class="uk-icon-book"></i> Turtle Tina</h3>
-      <a href="/"><img height="200" src="http://images.nclab.com.cn/img/turlte-cover.png" alt=""></a>
+      <a href="/"><img class="uk-border-rounded" height="200" src="http://images.nclab.com.cn/img/turlte-cover.png" alt=""></a>
     </div>
   </div>
 
   <div class="uk-width-2-10">
     <div class="uk-panel uk-panel-hover">
       <h3 class="uk-panel-title"><i class="uk-icon-book"></i> 3D 建模</h3>
-      <a href="http://static.nclab.com.cn/textbook/PLaSM.pdf"><img height="200" src="http://images.nclab.com.cn/img/plasm-cover.png" alt=""></a>
+      <a href="http://static.nclab.com.cn/textbook/PLaSM.pdf"><img class="uk-border-rounded" height="200" src="http://images.nclab.com.cn/img/plasm-cover.png" alt=""></a>
     </div>
   </div>
 
   <div class="uk-width-2-10">
     <div class="uk-panel uk-panel-hover">
       <h3 class="uk-panel-title"><i class="uk-icon-book"></i> Python 编程</h3>
-      <a href="http://static.nclab.com.cn/textbook/Python.pdf"><img height="200" src="http://images.nclab.com.cn/img/python-cover.png" alt=""></a>
+      <a href="http://static.nclab.com.cn/textbook/Python.pdf"><img class="uk-border-rounded" height="200" src="http://images.nclab.com.cn/img/python-cover.png" alt=""></a>
     </div>
   </div>
 
