modify karel tpl

--- a/jungle/templates/jungle/gallery/karel.html
+++ b/jungle/templates/jungle/gallery/karel.html
@@ -25,6 +25,7 @@
 	{% endfor %}
 </div>
 <hr class="uk-grid-divider">
+<div>Go to >> <a href="{% url 'gallery_3d' %}">  3D 建模</a></div>
 {% endblock %}
 
 {% block reactjs %}
