--- a/jungle/templates/base/v0.1/base.html
+++ b/jungle/templates/base/v0.1/base.html
@@ -49,7 +49,7 @@
       <div class="container">
         <div class="navbar-header">
           <div id="spinning-container">
-            <img src="https://karel-pic.oss-cn-beijing.aliyuncs.com/img/karel-alone.png" style="margin:10px 10px 0 0;" width="44" height="44" alt="Karel">
+            <img src="https://images.nclab.com.cn/img/karel-alone.png" style="margin:10px 10px 0 0;" width="44" height="44" alt="Karel">
           </div>  
         </div>
         <div class="navbar-header">
@@ -214,10 +214,10 @@
     <hr>
 
     <footer>
-      <p class="text-center">&copy; Computing-works 2016 | <img style="width: 120px; height: 120px" src="https://karel-pic.oss-cn-beijing.aliyuncs.com/img/karel-qr.jpg"/> | <a href="https://desktop.nclab.com.cn:8888/" target='_blank'>在线桌面</a> 
+      <p class="text-center">&copy; Computing-works 2016 | <img style="width: 120px; height: 120px" src="https://images.nclab.com.cn/img/karel-qr.jpg"/> | <a href="https://desktop.nclab.com.cn:8888/" target='_blank'>在线桌面</a> 
         | <a href="https://desktop.nclab.com/" target='_blank'>互动课程(英文版)</a> | 
     <a href={% url 'blog:index' %}>博客</a> | <a href="/">学校</a> | <a href="/status/">状态</a> | <a href="/resource/">资源</a></p>
-	  <p class="text-center"><img style="width: 78px; height: 28px" src="https://karel-pic.oss-cn-beijing.aliyuncs.com/img/accept-sign-general.2248fd13.png"/>: <span id="bitcoin-address">164L9tHd2B4nvm51yK9mAPjbbGo1fCtgN4 </span></p> 
+	  <p class="text-center"><img style="width: 78px; height: 28px" src="https://images.nclab.com.cn/img/accept-sign-general.2248fd13.png"/>: <span id="bitcoin-address">164L9tHd2B4nvm51yK9mAPjbbGo1fCtgN4 </span></p> 
     </footer>
     
     <!-- Bootstrap core JavaScript
