--- a/jungle/templates/base/v0.1/base.html
+++ b/jungle/templates/base/v0.1/base.html
@@ -49,7 +49,7 @@
       <div class="container">
         <div class="navbar-header">
           <div id="spinning-container">
-            <img src="https://images.nclab.com.cn/img/karel-alone.png" style="margin:10px 10px 0 0;" width="44" height="44" alt="Karel">
+            <img src="http://images.nclab.com.cn/img/karel-alone.png" style="margin:10px 10px 0 0;" width="44" height="44" alt="Karel">
           </div>  
         </div>
         <div class="navbar-header">
@@ -111,7 +111,7 @@
                 <!-- <a class="btn btn-primary btn-lg" href="https://hoc.nclab.com/karel/" role="button" target="_blank"> 体验&raquo;</a> -->
                 <a class="btn btn-primary btn-lg" href="/gallery/karel/" role="button"> 体验&raquo;</a> | 
                 <a class="btn btn-default" href="/alipay/" role="button" >购买 &raquo;</a> |
-                <a class="btn btn-default" href="https://karel.readthedocs.org/zh_CN/latest/p01.html" role="button" target='_blank'>了解更多 &raquo;</a>
+                <a class="btn btn-default" href="http://karel.readthedocs.org/zh_CN/latest/p01.html" role="button" target='_blank'>了解更多 &raquo;</a>
             </p>
           </div>
           <div class="col-md-4">
@@ -214,10 +214,10 @@
     <hr>
 
     <footer>
-      <p class="text-center">&copy; Computing-works 2016 | <img style="width: 120px; height: 120px" src="https://images.nclab.com.cn/img/karel-qr.jpg"/> | <a href="https://desktop.nclab.com.cn:8888/" target='_blank'>在线桌面</a> 
+      <p class="text-center">&copy; Computing-works 2016 | <img style="width: 120px; height: 120px" src="http://images.nclab.com.cn/img/karel-qr.jpg"/> | <a href="http://desktop.nclab.com.cn:8888/" target='_blank'>在线桌面</a> 
         | <a href="https://desktop.nclab.com/" target='_blank'>互动课程(英文版)</a> | 
     <a href={% url 'blog:index' %}>博客</a> | <a href="/">学校</a> | <a href="/status/">状态</a> | <a href="/resource/">资源</a></p>
-	  <p class="text-center"><img style="width: 78px; height: 28px" src="https://images.nclab.com.cn/img/accept-sign-general.2248fd13.png"/>: <span id="bitcoin-address">164L9tHd2B4nvm51yK9mAPjbbGo1fCtgN4 </span></p> 
+	  <p class="text-center"><img style="width: 78px; height: 28px" src="http://images.nclab.com.cn/img/accept-sign-general.2248fd13.png"/>: <span id="bitcoin-address">164L9tHd2B4nvm51yK9mAPjbbGo1fCtgN4 </span></p> 
     </footer>
     
     <!-- Bootstrap core JavaScript
