--- a/jungle/templates/base/v0.1/base.html
+++ b/jungle/templates/base/v0.1/base.html
@@ -216,7 +216,7 @@
     <footer>
       <p class="text-center">&copy; Computing-works 2016 | <img style="width: 120px; height: 120px" src="http://images.nclab.com.cn/img/karel-qr.jpg"/> | <a href="http://desktop.nclab.com.cn:8888/" target='_blank'>在线桌面</a> 
         | <a href="https://desktop.nclab.com/" target='_blank'>互动课程(英文版)</a> | 
-    <a href={% url 'blog:index' %}>博客</a> | <a href="/">学校</a> | <a href="/status/">状态</a> | <a href="/resource/">资源</a> | <a href="https://hoc.nclab.com/karel/zh/">HOC-Karel</a></p>
+    <a href={% url 'blog:index' %}>博客</a> | <a href="/">学校</a> | <a href="/status/">状态</a> | <a href="/resource/">资源</a> | <a href="https://hoc.nclab.com/karel/zh/" target='_blank'>HOC-Karel</a></p>
 	  <p class="text-center"><img style="width: 78px; height: 28px" src="http://images.nclab.com.cn/img/accept-sign-general.2248fd13.png"/>: <span id="bitcoin-address">164L9tHd2B4nvm51yK9mAPjbbGo1fCtgN4 </span></p> 
     </footer>
     
